<?xml version="1.0"?>
<package>
  <name>multi_uav</name>
  <version>0.1.1</version>
  <description>multi_uav</description>

  <maintainer email="hs20@hw.ac.uk.co">Hugo Sardinha</maintainer>
  <author email="hs20@hw.ac.uk.co">Hugo Sardinha</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

</package>
